[project]
name = "pythia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.8.0",
    "mlx-lm>=0.31.1",
    "psutil>=7.2.2",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
pythia = "pythia.cli:app"
