[project]
name = "pythia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "huggingface-hub>=1.8.0",
    "httpx>=0.28.1",
    "mlx-lm>=0.31.1",
    "psutil>=7.2.2",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "typer>=0.24.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
pythia = "pythia.cli:app"
